# rust_libc_build_failure

./: Cargo.toml  LICENSE.md  README.md  build_error.txt
src/: main.rs
